--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </nav>
         <div class="container"> 
             <div class="message right">Alisha: hello</div>
-            <div class="message left">Dhruv:Kuch ni</div>
+            <div class="message left">A:Kuch ni</div>
         </div>
         <div class="send">
           <form action="#" id="send-container">
