--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GossipBee</title>
-    <script src="http://localhost:9000/socket.io/socket.io.js"></script>
-    <script src="client.js"></script>
+    <script defer src="http://localhost:9000/socket.io/socket.io.js"></script>
+    <script defer src="client.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
