--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <nav>
+      <h1>GossipBee : A Group-chat Application</h1>
         <img class="logo" src="logo.jpg" alt="GossipBee">
         </nav>
         <div class="container"> 
-            <div class="message right">Alisha: hello</div>
-            <div class="message left">A:Kuch ni</div>
+            
         </div>
         <div class="send">
           <form action="#" id="send-container">
